--- a/fi/studies.html
+++ b/fi/studies.html
@@ -43,54 +43,108 @@
 			 <p class="about-title">Opintoni &#128214;</p>
 		<div class="content">
 		<div class="wrap">
-				<div class="studies">
-					<h6>MS-C1420 Fourier-analyysi</h6>
-					<h6>MS-A0502 Todennäköisyyslaskennan ja tilastotieteen peruskurssi</h6>
-					<h6>MS-A0502 Differentiaali- ja integraalilaskenta 1</h6>
-					<h6>MS-A0203 Differentiaali- ja integraalilaskenta 2</h6>
-					<h6>MS-A0003 Matriisilaskenta</h6>
-					<h6>ELEC-A3110 Mekaniikka</h6>
-					<h6>ELEC-A7100 Basic Course in C programming</h6>
-					<h6>ELEC-A7200 Signals and Systems</h6>
-					<h6>ELEC-A5140 Matematiikkaohjelmistot</h6>
-					<h6>ELEC-A4130 Sähkö ja magnetismi</h6>
-					<h6>ELEC-A4010 Sähköpaja</h6>
-					<h6>ELEC-C7241 Tietokoneverkot</h6>
-					<h6>ELEC-C7320 Ohjelmistoradio</h6>
-					<h6>ELEC-C7110 Informaatioteknologian perusteet</h6>
-					<h6>ELEC-C1110 Automaatio- ja systeemitekniikan perusteet</h6>
-					<h6>ELEC-C7231 Tiedonsiirron perusteet</h6>
-					<h6>ELEC-C5341 Äänen- ja puheenkäsittely</h6>
-					<h6>ELEC-C7250 Tietoliikenteen stokastiset ilmiöt</h6>
-					<h6>ELEC-C5231 Introduction to Signal Processing</h6>
-					<h6>ELEC-C5213 Signaalien tilastollinen mallinnus</h6>
-					<h6>ELEC-E9911 Demola Project Work</h6>
-					<h6>ELEC-E7315 Networking at Scale and Advanced Applications D</h6>
-					<h6>ELEC-E7410 Communication Transmission Lines</h6>
-					<h6>ELEC-E7840 Smart Wearables</h6>
-					<h6>ELEC-E7470 Cybersecurity D</h6>
-					<h6>25C00200 Entrepreneurship and Innovation Management</h6>
-					<h6>CS-A1111 Ohjelmoinnin peruskurssi Y1</h6>
-					<h6>CS-C3240 Machine Learning D</h6>
-					<h6>CS-A1150 Tietokannat</h6>
-					<h6>CS-C3170 Web Software Development</h6>
-					<h6>CS-A1110 Ohjelmointi 1</h6>
-					<h6>CS-A1120 Programming 2</h6>
-					<h6>CS-A1140 Data Structures and Algorithms</h6>
-					<h6>CS-C3130 Information Security</h6>
-					<h6>CS-E4190 Cloud Software and Systems D</h6>
-					<h6>CS-E400210 Special Course in Computer Science: Introduction to Mathematical Reasoning for Computer Scientists</h6>
-					<h6>CS-E4340 Cryptography D</h6>
-					<h6>CS-E4400 Design of WWW Services</h6>
-					<h6>CS-EJ4404 Johdatus kryptografiaan</h6>
-					<h6>CS-E4500 Advanced course in Algorithms D</h6>
-					<h6>CS-E4565 Combinatorics of Computation D</h6>
-					<h6>PHYS-A0140 Aineen rakenne</h6>
-					<h6>TU-A1100 Tuotantotalous 1</h6>
-					</div>
-					<div class="clear"></div>
-				</div>
-				<div class="studies"></div>
+			<div class="studies">
+				<h3>Aalto-yliopisto</h3>
+				<h6>MS-C1420 Fourier-analyysi</h6>
+				<h6>MS-A0502 Todennäköisyyslaskennan ja tilastotieteen peruskurssi</h6>
+				<h6>MS-A0502 Differentiaali- ja integraalilaskenta 1</h6>
+				<h6>MS-A0203 Differentiaali- ja integraalilaskenta 2</h6>
+				<h6>MS-A0003 Matriisilaskenta</h6>
+				<h6>ELEC-A3110 Mekaniikka</h6>
+				<h6>ELEC-A7100 Basic Course in C programming</h6>
+				<h6>ELEC-A7200 Signals and Systems</h6>
+				<h6>ELEC-A5140 Matematiikkaohjelmistot</h6>
+				<h6>ELEC-A4130 Sähkö ja magnetismi</h6>
+				<h6>ELEC-A4010 Sähköpaja</h6>
+				<h6>ELEC-C7241 Tietokoneverkot</h6>
+				<h6>ELEC-C7320 Ohjelmistoradio</h6>
+				<h6>ELEC-C7110 Informaatioteknologian perusteet</h6>
+				<h6>ELEC-C1110 Automaatio- ja systeemitekniikan perusteet</h6>
+				<h6>ELEC-C7231 Tiedonsiirron perusteet</h6>
+				<h6>ELEC-C5341 Äänen- ja puheenkäsittely</h6>
+				<h6>ELEC-C7250 Tietoliikenteen stokastiset ilmiöt</h6>
+				<h6>ELEC-C5231 Introduction to Signal Processing</h6>
+				<h6>ELEC-C5213 Signaalien tilastollinen mallinnus</h6>
+				<h6>ELEC-E9911 Demola Project Work</h6>
+				<h6>ELEC-E7315 Networking at Scale and Advanced Applications D</h6>
+				<h6>ELEC-E7410 Communication Transmission Lines</h6>
+				<h6>ELEC-E7840 Smart Wearables</h6>
+				<h6>ELEC-E7470 Cybersecurity D</h6>
+				<h6>25C00200 Entrepreneurship and Innovation Management</h6>
+				<h6>CS-A1111 Ohjelmoinnin peruskurssi Y1</h6>
+				<h6>CS-C3240 Machine Learning D</h6>
+				<h6>CS-A1150 Tietokannat</h6>
+				<h6>CS-C3170 Web Software Development</h6>
+				<h6>CS-A1110 Ohjelmointi 1</h6>
+				<h6>CS-A1120 Programming 2</h6>
+				<h6>CS-A1140 Data Structures and Algorithms</h6>
+				<h6>CS-C3130 Information Security</h6>
+				<h6>CS-E4190 Cloud Software and Systems D</h6>
+				<h6>CS-E400210 Special Course in Computer Science: Introduction to Mathematical Reasoning for Computer Scientists</h6>
+				<h6>CS-E4340 Cryptography D</h6>
+				<h6>CS-E4400 Design of WWW Services</h6>
+				<h6>CS-EJ4404 Johdatus kryptografiaan</h6>
+				<h6>CS-E4500 Advanced course in Algorithms D</h6>
+				<h6>CS-E4565 Combinatorics of Computation D</h6>
+				<h6>PHYS-A0140 Aineen rakenne</h6>
+				<h6>TU-A1100 Tuotantotalous 1</h6>
+			</div>
+			<div class="clear"></div>
+			<div class="studies">
+				<h3>Helsingin yliopisto</h3>
+				<h6>MAT11001 Johdatus yliopistomatematiikkaan</h6>
+				<h6>MAT11006 Calculus IA: Limits and differentiation</h6>
+				<h6>MAT11007 Calculus IB: Integration</h6>
+				<h6>MAT11008 Advanced calculus</h6>
+				<h6>MAT11002 Lineaarialgebra ja matriisilaskenta I</h6>
+				<h6>MAT21001 Lineaarialgebra ja matriisilaskenta II</h6>
+				<h6>MAT22011 Lineaarialgebra ja matriisilaskenta III</h6>
+				<h6>MAT21002 Sarjat</h6>
+				<h6>MAT21003 Vektorianalyysi I</h6>
+				<h6>MAT21020 Vektorianalyysi II</h6>
+				<h6>MAT21005 Topologia IA</h6>
+				<h6>MAT21006 Topologia IB</h6>
+				<h6>MAT21007 Mitta ja integraali</h6>
+				<h6>MAT21014 Johdatus logiikkaan I</h6>
+				<h6>MAT21015 Johdatus logiikkaan II</h6>
+				<h6>MAT12003 Todennäköisyyslaskenta I</h6>
+				<h6>MAT22001 Todennäköisyyslaskenta IIa</h6>
+				<h6>MAT22001 Todennäköisyyslaskenta IIb</h6>
+				<h6>MAT12001 Tilastotiede ja R tutuksi I</h6>
+				<h6>MAT12002 Tilastotiede ja R tutuksi II</h6>
+				<h6>MAT12004 Tilastollinen päättely I</h6>
+				<h6>MAT12005 Data-analyysin projekti</h6>
+				<h6>MAT20005 Akateemiset taidot</h6>
+				<h6>MAT20016 Latex kurssi</h6>
+				<h6>MAT21019 Matriisilaskennan sovelluksia</h6>
+				<h6>MAT22012 Tilastotieteen tilastokenttä</h6>
+				<h6>MAT11009 Koneoppimisen matematiikan perusteet I</h6>
+				<h6>FYS4002 Työelämätaidot I - Ongelmanratkaisu ryhmässä</h6>
+				<h6>FYS1013 Tieteellinen laskenta I</h6>
+				<h6>FYS1001 Vuorovaikutukset ja kappaleet</h6>
+				<h6>FYS1002 Vuorovaikutukset ja aine</h6>
+				<h6>FYS1003 Sähkömagnetismi</h6>
+				<h6>FYS1004 Säteilykentät ja fotonit</h6>
+				<h6>FYS1010 Matemaattiset apuneuvot I</h6>
+				<h6>FYS1011 Matemaattiset apuneuvot II</h6>
+				<h6>FYS1012 Matemaattiset apuneuvot III</h6>
+				<h6>FYS1014 Havaintojen tilastollinen käsittely</h6>
+				<h6>FYS1016 Fysiikan perusopintojen laboratoriotyöt I</h6>
+				<h6>FYS1017 Fysiikan perusopintojen laboratoriotyöt II</h6>
+				<h6>FYS2003 Kvanttifysiikan perusteet</h6>
+				<h6>FYS2004 Suhteellisuusteorian perusteet</h6>
+				<h6>TKT10002 Ohjelmoinnin perusteet</h6>
+				<h6>TKT10003 Ohjelmoinnin jatkokurssi</h6>
+				<h6>TKT10004 Tietokantojen perusteet</h6>
+				<h6>TKT21031 Tekoälyn etiikka: Johdanto</h6>
+				<h6>TKT21028 The Elements of AI: Building AI</h6>
+				<h6>TKT100051 Tietokoneen toiminnan perusteet</h6>
+				<h6>ECOK-210 TA3a Mikrotaloustiede I</h6>
+				<h6>ECOK-211 TA3b Mikrotaloustiede II</h6>
+				<h6></h6>
+				<h6></h6>
+			</div>
+		</div>
 		</div>
 		</div>
 		<div class="content">
