--- a/studies.html
+++ b/studies.html
@@ -88,6 +88,9 @@
 					<h6>CS-E4565 Combinatorics of Computation D</h6>
 					<h6>PHYS-A0140 Structure of Matter</h6>
 					<h6>TU-A1100 Industrial Engineering and Management</h6>
+				</div>
+				<div class="clear"></div>
+				<div class="studies">
 					<h3>University of Helsinki</h3>
 					<h6>MAT11001 Introduction to University Mathematics</h6>
 					<h6>MAT11006 Calculus IA: Limits and Differentiation</h6>
@@ -135,10 +138,9 @@
 					<h6>TKT10004 Introduction to Databases</h6>
 					<h6>TKT21031 Ethics of AI</h6>
 					<h6>TKT21028 The Elements of AI: Building AI</h6>
-					</div>
-					<div class="clear"></div>
 				</div>
-				<div class="studies"></div>
+				<div class="clear"></div>
+		</div>
 		</div>
 		</div>
 		<div class="content">
