--- a/resume.html
+++ b/resume.html
@@ -52,13 +52,13 @@
 										<p>Major: Mathematics</p>
 										<p>Thesis Work (grade: 5 / 5):</p>
 										<a href="https://www.researchgate.net/publication/393712523_Mathematical_Analysis_of_Volterra_Integral_Equations/references"><p>Mathematical Analysis of Volterra Integral Equations</p></a>
-										<p>Bachelor Honours -award</p>
+										<p>GPA: 4.97 / 5, Bachelor Honours -award</p>
 										<h4>Aalto University | 2021 – 2024</h4>
 										<p>Bachelor of Science (Technology)</p>
 										<p>Marjor: Information Technology</p>
 										<p>Thesis Work (grade: 5 / 5):</p>
 										<a href="https://urn.fi/URN:NBN:fi:aalto-202406044058"><p>Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</p></a>
-										<p>Graduated with Honours</p>
+										<p>GPA: 4.5 / 5, Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
 										<p>Best Design Award for top-voted project in ELEC-E7840 Smart Wearables course (DriveSense Smart Glove, gesture-recognizing glove), Aalto University, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2nd place (Next Gen Drone Solution), 2025
