--- a/fi/resume.html
+++ b/fi/resume.html
@@ -52,13 +52,13 @@
 										<p>Pääaine: matematiikka</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
 										<a href="https://www.researchgate.net/publication/393712523_Mathematical_Analysis_of_Volterra_Integral_Equations/references"><p>Volterran integraaliyhtälöiden matemaattinen analyysi</p></a>
-										<p>Bachelor Honours -kunniamaininta</p>
+										<p>KA: 4.97 / 5. Bachelor Honours -kunniamaininta</p>
 										<h4>Aalto-yliopisto | 2021 – 2024</h4>
 										<p>Tekniikan kandidaatti</p>
 										<p>Pääaine: informaatioteknologia</p>
 										<p>Opinnäytetyö (arvosana: 5 / 5):</p>
 										<a href="https://urn.fi/URN:NBN:fi:aalto-202406044058"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
-										<p>Tutkinto suoritettu erinomaisesti</p>
+										<p>KA: 4.5 / 5. Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
 					                                        <p>Master of Business Administration Academy Europe avoimessa yliopistossa (Online MBA -ohjelma), 2025</p>
 										<p>Paras suunnittelupalkinto (Best Design Award) eniten ääniä saaneelle projektille kurssilla ELEC-E7840 Smart Wearables (DriveSense-älyhanska, eleitä tunnistava hanska), Aalto-yliopisto, 2025</p>
