--- a/resume.html
+++ b/resume.html
@@ -124,6 +124,9 @@
 										<h3>Skills &#128208;</h3>
 										<p>Windows / Linux / macOS</p>
 										<p>Microsoft Office / WordPress / Canva / Figma</p>
+									    <p>Arduino IDE / Processing IDE / Unity Hub </p>
+									    <p>Fritzing / OpenSCAD / AutoCAD / Ultimaker Cura / KiCad</p>
+									    <p>LTspice / Wireshark</p>
 										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
 										<p>MySQL / PostgreSQL</p>
 										<p>JavaScript / TypeScript / Golang</p>
