--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 										<a href="https://urn.fi/URN:NBN:fi:aalto-202406044058"><p>Wi-Fi 7 Analysis: Overview and Comparison with Previous IEEE 802.11 Standards</p></a>
 										<p>GPA: 4.5 / 5. Graduated with Honours</p>
 										<h3>Activities &#128161;<span> </span></h3>
-							     		<p>Student volunteer and participant at UbiComp / ISWC 2025 International Conference on Ubiquitous, Pervasive and Wearable Computing, 2025</p>
+							     		<p>Participant and student volunteer at UbiComp / ISWC 2025 International Conference on Ubiquitous, Pervasive and Wearable Computing, 2025</p>
                                         <p>Volunteer at UCPAE 2025 Europe Forum (United Chinese Professional Associations in Europe), 2025</p>
 										<p>Best Design Award for top-voted project in ELEC-E7840 Smart Wearables course (DriveSense Smart Glove, gesture-recognizing glove), Aalto University, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2nd place (Next Gen Drone Solution), 2025
