--- a/fi/resume.html
+++ b/fi/resume.html
@@ -60,11 +60,13 @@
 										<a href="https://urn.fi/URN:NBN:fi:aalto-202406044058"><p>Wi-Fi 7 -analyysi: yleiskatsaus ja vertailu aikaisempiin IEEE 802.11 -standardeihin</p></a>
 										<p>KA: 4.5 / 5. Tutkinto suoritettu erinomaisesti</p>
 										<h3>Aktiviteetit &#128161;<span> </span></h3>
-					                                        <p>Master of Business Administration Academy Europe avoimessa yliopistossa (Online MBA -ohjelma), 2025</p>
+								    	<p>Dekaanin kannustusstipendi, 2021–2024</p>
+								    	<p>Opiskelijavapaaehtoinen UbiComp / ISWC 2025 -konferenssissa (International Conference on Ubiquitous, Pervasive and Wearable Computing), 2025</p>
+                                        <p>Vapaaehtoinen UCPAE 2025 Europe Forumissa (United Chinese Professional Associations in Europe), 2025</p>
+					                    <p>Master of Business Administration Academy Europe avoimessa yliopistossa (Online MBA -ohjelma), 2025</p>
 										<p>Paras suunnittelupalkinto (Best Design Award) eniten ääniä saaneelle projektille kurssilla ELEC-E7840 Smart Wearables (DriveSense-älyhanska, eleitä tunnistava hanska), Aalto-yliopisto, 2025</p>
 										<p>Nokia & Elisa & Microsoft Student Network Challenge Hackathon 2. sija (Next Gen Drone Solution), 2025
 										<p>Demola innovaatioprojekti: Drones for National Security, 2024</p>
-										<p>Dekaanin kannustusstipendi, 2021–2024</p>
 										<p>Teknologia 23 Amazing Robots Contest 2.sija (Pandabot, ääneen reagoiva ja itsenäisesti liikkuva robotti), 2023</p>
 										<p>2022–2023 ISLP (International Statistical Literacy Project) Suomen kansallisen kilpailun 1. sija, 2023</p>
 										<p>Eteläsuomalaisen osakunnan digimestari (tietotekniikkavastaava), 2023</p>
@@ -123,6 +125,9 @@
 										<h3>Osaaminen &#128208;</h3>
 										<p>Windows / Linux / macOS</p>
 										<p>Microsoft Office / WordPress / Canva / Figma</p>
+									    <p>Arduino IDE / Processing IDE / Unity Hub </p>
+									    <p>Fritzing / OpenSCAD / AutoCAD / Ultimaker Cura / KiCad</p>
+									    <p>LTspice / Wireshark</p>
 										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
 										<p>MySQL / PostgreSQL</p>
 										<p>JavaScript / TypeScript / Golang</p>
