--- a/studies.html
+++ b/studies.html
@@ -50,6 +50,7 @@
 					<h6>MS-A0502 Differential and Integral Calculus 1</h6>
 					<h6>MS-A0203 Differential and Integral Calculus 2</h6>
 					<h6>MS-A0003 Matrix Algebra</h6>
+					<h6>MS-E1688 Advanced Cryptography D</h6>
 					<h6>ELEC-A3110 Mechanics</h6>
 					<h6>ELEC-A7100 Basic Course in C programming</h6>
 					<h6>ELEC-A7200 Signals and Systems</h6>
@@ -69,7 +70,9 @@
 					<h6>ELEC-E7315 Networking at Scale and Advanced Applications D</h6>
 					<h6>ELEC-E7410 Communication Transmission Lines</h6>
 					<h6>ELEC-E7840 Smart Wearables</h6>
+					<h6>ELEC-E7845 Smart Wearables II D</h6>
 					<h6>ELEC-E7470 Cybersecurity D</h6>
+				    <h6>ELEC-E7120 Wireless Systems</h6>
 					<h6>25C00200 Entrepreneurship and Innovation Management</h6>
 					<h6>CS-A1111 Basic Course in Programming Y1</h6>
 					<h6>CS-C3240 Machine Learning D</h6>
@@ -80,12 +83,13 @@
 					<h6>CS-A1140 Data Structures and Algorithms</h6>
 					<h6>CS-C3130 Information Security</h6>
 					<h6>CS-E4190 Cloud Software and Systems D</h6>
-					<h6>CS-E400210 Special Course in Computer Science: Introduction to Mathematical Reasoning for Computer Scientists</h6>
+					<h6>CS-E400210 Introduction to Mathematical Reasoning for Computer Scientists</h6>
 					<h6>CS-E4340 Cryptography D</h6>
 					<h6>CS-E4400 Design of WWW Services</h6>
 					<h6>CS-EJ4404 Introduction to Cryptography</h6>
 					<h6>CS-E4500 Advanced course in Algorithms D</h6>
 					<h6>CS-E4565 Combinatorics of Computation D</h6>
+					<h6>CS-E4700 Logic and Hard Computational Problems</h6>
 					<h6>PHYS-A0140 Structure of Matter</h6>
 					<h6>TU-A1100 Industrial Engineering and Management</h6>
 				</div>
