--- a/resume.html
+++ b/resume.html
@@ -94,8 +94,15 @@
                                    </div>
                                 <div class="row_side-right">
                                         <h3>Work Experience &#128188;<span> </span></h3>
-					    					<h4>Local IT Support</h4>
-					    					<p>University of Helsinki | 23.05.-06.06.2025</p>
+										<h4>Research Assistant<h4>
+										<p>Aalto University | 01.10.2025 - Present</p>
+										<p>Responsibility: conducting research on neuromorphic sensory intelligent systems and biointerfaces (hardware–software integration, sensor data processing, and intelligent system design).</p>
+										<h4>Software Development Intern</h4>
+										<p>University of Helsinki | 09.06.-18.07.2025</p>
+										<p>Responsibility: implementing web-based features for the MOOC course <pa>Business Model Canvas</pa> and assisting in the development of an AI-powered chatbot to support online learners using React, TypeScript, Node.js, Git and a Linux-based development environment.</p>
+										<h4>Course Assistant</h4>
+					    				<h4>Local IT Support</h4>
+					    				<p>University of Helsinki | 23.05.-06.06.2025</p>
 										<p>Responsibility: investigating WLAN network connection and web browsing problems in different operating systems as part of the University of Helsinki's entrance exam development team.</p>
 										<h4>Course Assistant</h4>
 										<p>Aalto University | 07.01.-07.04.2025</p>
