--- a/fi/resume.html
+++ b/fi/resume.html
@@ -44,7 +44,7 @@
                             <div class="row-fluid">
                                 <div class="row_side-left">
                                         <h3>Koulutus &#127891;<span> </span></h3>
-                                        					<h4>Aalto-yliopisto | 2024 – Nykyhetki</h4>
+                                        <h4>Aalto-yliopisto | 2024 – Nykyhetki</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Pääaine: tietotekniikka</p>
 										<h4>Helsingin yliopisto | 2022 – 2025</h4>
@@ -95,7 +95,13 @@
                                    </div>
                                 <div class="row_side-right">
                                         <h3>Työkokemukset &#128188;<span> </span></h3>
-					    					<h4>IT-lähitukihenkilö</h4>
+									    <h4>Tutkimusavustaja</h4>
+										<p>Aalto-yliopisto | 01.10.2025 - Nykyhetki</p>
+										<p>Työtehtävätt: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
+										<h4>Ohjelmistokehityksen harjoittelija</h4> 
+										<p>Helsingin yliopisto | 09.06.–18.07.2025</p> 
+										<p>Verkkopohjaisten ominaisuuksien toteuttaminen MOOC-kurssille <pa>Business Model Canvas</pa> sekä tekoälypohjaisen chatbotin kehityksen tekeminen käyttäjien avuksi käyttäen React, TypeScript, Node.js, Git ja Linux-pohjaista kehitysympäristöä.</p>
+					    				<h4>IT-lähitukihenkilö</h4>
 										<p>Helsingin yliopisto | 23.05.-06.06.2025</p>
 										<p>Työtehtävät: WLAN-verkkoyhteys- ja verkkoselainongelmien selvittäminen eri käyttöjärjestelmissä osana Helsingin yliopiston valintakokeiden kehitystiimiä.</p>
 										<h4>Kurssiassistentti</h4>
