--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
                                    </div>
                                 <div class="row_side-right">
                                         <h3>Work Experience &#128188;<span> </span></h3>
-										<h4>Research Assistant<h4>
+										<h4>Research Assistant</h4>
 										<p>Aalto University | 01.10.2025 - Present</p>
 										<p>Responsibility: conducting research on neuromorphic sensory intelligent systems and biointerfaces (hardware–software integration, sensor data processing, and intelligent system design).</p>
 										<h4>Software Development Intern</h4>
