--- a/fi/resume.html
+++ b/fi/resume.html
@@ -98,6 +98,8 @@
 									    <h4>Tutkimusavustaja</h4>
 										<p>Aalto-yliopisto | 01.10.2025 - Nykyhetki</p>
 										<p>Työtehtävätt: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
+										<p>Aalto-yliopisto | 01.09.2025 - Nykyhetki</p>
+										<p>Työtehtävät: opetusvideoiden tuottaminen Smart Wearables II -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
 										<h4>Ohjelmistokehityksen harjoittelija</h4> 
 										<p>Helsingin yliopisto | 09.06.–18.07.2025</p> 
 										<p>Verkkopohjaisten ominaisuuksien toteuttaminen MOOC-kurssille <pa>Business Model Canvas</pa> sekä tekoälypohjaisen chatbotin kehityksen tekeminen käyttäjien avuksi käyttäen React, TypeScript, Node.js, Git ja Linux-pohjaista kehitysympäristöä.</p>
