--- a/resume.html
+++ b/resume.html
@@ -135,7 +135,7 @@
 										<p>Microsoft Office / WordPress / Canva / Figma</p>
 									    <p>Arduino IDE / Processing IDE / Unity Hub </p>
 									    <p>Fritzing / OpenSCAD / AutoCAD / Ultimaker Cura / KiCad</p>
-									    <p>LTspice / Wireshark</p>
+									    <p>LTspice / TINA-TI / Wireshark</p>
 										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
 										<p>MySQL / PostgreSQL</p>
 										<p>JavaScript / TypeScript / Golang</p>
