--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,9 @@
                             <div class="row-fluid">
                                 <div class="row_side-left">
                                         <h3>Education &#127891;<span> </span></h3>
+										<h4>University of Helsinki | 2025 – Present</h4>
+										<p>Master's Programme in Mathematics and Statistics</p>
+										<p>Marjor: Mathematics</p>
                                         <h4>Aalto University | 2024 – Present</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Marjor: Computer Science</p>
