--- a/fi/resume.html
+++ b/fi/resume.html
@@ -44,6 +44,9 @@
                             <div class="row-fluid">
                                 <div class="row_side-left">
                                         <h3>Koulutus &#127891;<span> </span></h3>
+										<h4>Helsingin yliopisto | 2025 – Nykyhetki</h4>
+										<p>Matematiikan ja tilastotieteen maisteriohjelma</p>
+										<p>Pääaine: matematiikka</p>
                                         <h4>Aalto-yliopisto | 2024 – Nykyhetki</h4>
 										<p>Master’s Programme in Computer, Communication and Information Sciences</p>
 										<p>Pääaine: tietotekniikka</p>
