--- a/resume.html
+++ b/resume.html
@@ -139,7 +139,7 @@
 									    <p>Arduino IDE / Processing IDE / Unity Hub </p>
 									    <p>Fritzing / OpenSCAD / AutoCAD / Ultimaker Cura / KiCad</p>
 									    <p>LTspice / TINA-TI / Wireshark</p>
-										<p>Python / Scala / Java / R / MATLAB / C / C#</p>
+										<p>Python / Scala / Java / R / MATLAB / C / C++ / C#</p>
 										<p>MySQL / PostgreSQL</p>
 										<p>JavaScript / TypeScript / Golang</p>
 										<p>Google Cloud Platform / Kubernetes / Docker / Git</p>
