Update employment dates in resume.html

--- a/fi/resume.html
+++ b/fi/resume.html
@@ -102,7 +102,7 @@
 										<p>Aalto-yliopisto | 01.10.2025 - Nykyhetki</p>
 										<p>Työtehtävätt: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
 										<h4>Digiassistentti</h4>
-										<p>Aalto-yliopisto | 01.09.2025 - Nykyhetki</p>
+										<p>Aalto-yliopisto | 01.09.2025 - 31.12.2025</p>
 										<p>Työtehtävät: opetusvideoiden tuottaminen Smart Wearables II -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
 										<h4>Ohjelmistokehityksen harjoittelija</h4> 
 										<p>Helsingin yliopisto | 09.06.–18.07.2025</p> 
