Update internship dates in resume.html

--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
 										<p>Aalto University | 01.10.2025 - Present</p>
 										<p>Responsibility: conducting research on neuromorphic sensory intelligent systems and biointerfaces (hardware–software integration, sensor data processing, and intelligent system design).</p>
 										<h4>Digital Assistant</h4>
-										<p>Aalto University | 01.09.2025 - Present</p>
+										<p>Aalto University | 01.09. - 31.12.2025</p>
 										<p>Responsibility: producing tutorial videos for the Smart Wearables II course, covering topics such as  embroidery of textile antennas and pressure sensors, fabrication of textile-based energy harvesters, tensile testing and cyclical analysis of strain sensors using textile analyzers, and integration of textile sensors and energy harvesters into fabrics. </p>
 										<h4>Software Development Intern</h4>
 										<p>University of Helsinki | 09.06.-18.07.2025</p>
