Fix job description formatting in resume.html

--- a/fi/resume.html
+++ b/fi/resume.html
@@ -118,7 +118,7 @@
 										<p>Työtehtävät: WLAN-verkkoyhteys- ja verkkoselainongelmien selvittäminen eri käyttöjärjestelmissä osana Helsingin yliopiston valintakokeiden kehitystiimiä.</p>
 										<h4>Kurssiassistentti</h4>
 										<p>Aalto-yliopisto | 01.12.2023-31.03.2024</p>
-										<p>Työtehtävät: developing <pa>Työtehtävät: <pa>Informaatioteknologian perusteet</pa> -kurssin kehittäminen, opiskelijoiden ohjaaminen, laskuharjoitusten ja tentin tarkistaminen.</p>
+										<p>Työtehtävät: <pa>Informaatioteknologian perusteet</pa> -kurssin kehittäminen, opiskelijoiden ohjaaminen, laskuharjoitusten ja tentin tarkistaminen.</p>
 										<h4>Verkostokoordinaattori</h4>
 										<p>Suomen Yrittäjät ry | 01.09.-31.12.2021</p>
 										<p>Työtehtävät: <a href="https://www.yrittajat.fi/">yrittajat.fi</a> kotisivun kehittäminen (erityisesti englanninkielinen versio), maahanmuuttaneiden ja nuorten yrittäjien projektityöskentely, tapahtumatuotanto, viestintätehtävät ja tutkimusraportointitehtävät käyttäen WordPress, Dynamics 365, Sylvi ja Microsoft Office.</p>
