--- a/fi/resume.html
+++ b/fi/resume.html
@@ -106,7 +106,7 @@
 										<p>Työtehtävät: opetusvideoiden tuottaminen Smart Wearables II -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
 										<h4>Ohjelmistokehityksen harjoittelija</h4> 
 										<p>Helsingin yliopisto | 09.06.–18.07.2025</p> 
-										<p>Verkkopohjaisten ominaisuuksien toteuttaminen MOOC-kurssille <pa>Business Model Canvas</pa> sekä tekoälypohjaisen chatbotin kehityksen tekeminen käyttäjien avuksi käyttäen React, TypeScript, Node.js, Git ja Linux-pohjaista kehitysympäristöä.</p>
+										<p>Työtehtävät: verkkopohjaisten ominaisuuksien toteuttaminen MOOC-kurssille <pa>Business Model Canvas</pa> sekä tekoälypohjaisen chatbotin kehityksen tekeminen käyttäjien avuksi käyttäen React, TypeScript, Node.js, Git ja Linux-pohjaista kehitysympäristöä.</p>
 					    				<h4>IT-lähitukihenkilö</h4>
 										<p>Helsingin yliopisto | 23.05.-06.06.2025</p>
 										<p>Työtehtävät: WLAN-verkkoyhteys- ja verkkoselainongelmien selvittäminen eri käyttöjärjestelmissä osana Helsingin yliopiston valintakokeiden kehitystiimiä.</p>
