--- a/fi/resume.html
+++ b/fi/resume.html
@@ -103,7 +103,7 @@
 										<p>Työtehtävätt: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
 										<h4>Digiassistentti</h4>
 										<p>Aalto-yliopisto | 01.09. - 31.12.2025</p>
-										<p>Työtehtävät: opetusvideoiden tuottaminen Smart Wearables II -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
+										<p>Työtehtävät: opetusvideoiden tuottaminen <pa>Smart Wearables II</pa> -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
 										<h4>Ohjelmistokehityksen harjoittelija</h4> 
 										<p>Helsingin yliopisto | 09.06.–18.07.2025</p> 
 										<p>Työtehtävät: verkkopohjaisten ominaisuuksien toteuttaminen MOOC-kurssille <pa>Business Model Canvas</pa> sekä tekoälypohjaisen chatbotin kehityksen tekeminen käyttäjien avuksi käyttäen React, TypeScript, Node.js, Git ja Linux-pohjaista kehitysympäristöä.</p>
