--- a/fi/resume.html
+++ b/fi/resume.html
@@ -100,7 +100,7 @@
                                         <h3>Työkokemukset &#128188;<span> </span></h3>
 									    <h4>Tutkimusavustaja</h4>
 										<p>Aalto-yliopisto | 01.10.2025 - Nykyhetki</p>
-										<p>Työtehtävätt: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
+										<p>Työtehtävät: tutkimustyö neuromorfisiin sensoreihin pohjautuvien älykkäiden järjestelmien ja bio-rajapintojen parissa (laitteisto–ohjelmistointegraatio, sensoreiden datankäsittely ja älykkäiden järjestelmien suunnittelu).</p>
 										<h4>Digiassistentti</h4>
 										<p>Aalto-yliopisto | 01.09. - 31.12.2025</p>
 										<p>Työtehtävät: opetusvideoiden tuottaminen <pa>Smart Wearables II</pa> -kurssille erityisesti liittyen tekstiilipohjaisiin antenneihin ja paineantureihin, tekstiilipohjaisten energiankerääjien valmistukseen, jännityskokeeseen ja syklisten analyysien suorittamiseen venymäantureille tekstiilianalysaattoreilla sekä tekstiiliantureiden ja energiankerääjien integrointiin kankaisiin.</p>
